# master_project_ur

./: LICENSE  README.md
src/action_interfaces/: CMakeLists.txt  README.md
src/action_interfaces/action/: FullDrive.action
src/full_drive/: CMakeLists.txt  package.xml
src/full_drive/launch/: full_drive.launch.py  full_robot_drive.launch.py  usage.launch.py
src/full_drive/src/: action_server_node.cpp  usage_node.cpp
src/full_husky/amrl_husky_description/: CMakeLists.txt  package.xml
src/full_robot_description/: CMakeLists.txt  package.xml
src/full_robot_description/launch/: view_robot.launch.py
src/full_robot_description/rviz/: urdf.rviz
src/full_robot_description/urdf/: full_robot.urdf.xacro  full_robot_macro.xacro
src/full_robot_driver/: CMakeLists.txt  package.xml
src/full_robot_driver/launch/: robot_driver.launch.py
src/full_robot_driver/src/: static_gripper_publisher.cpp
src/full_robot_driver/urdf/: full_robot_controlled.urdf.xacro
src/full_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/full_robot_moveit_config/config/: full_robot.srdf  gripper.ros2_control.xacro  initial_positions.yaml  moveit_controllers.yaml
src/full_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_robot_moveit/: CMakeLists.txt  package.xml
src/robot_drive/: CMakeLists.txt  package.xml
src/robotiq_gripper_control/: CMakeLists.txt  package.xml
src/robotiq_gripper_control/src/: RobotiqCModelURCap.cpp  RobotiqCModelURCap.hpp  robotiq_gripper_control.cpp
src/service_interfaces/: CMakeLists.txt  package.xml
(+45 files in other folders)
