<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>full_robot_driver</name>
  <version>1.0.0</version>
  <description>new defined robot with gripper for the ros2 universal robot driver</description>
  <maintainer email="sohaibshehabsnouber@gmail.com">sohaib</maintainer>
  <license>Apache2.0</license>
  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
